fixed icon import, update for cloud9 development, spacing issue with flatly

--- a/app/styles/landing.scss
+++ b/app/styles/landing.scss
@@ -23,7 +23,6 @@ body {
   margin-left: auto;
   margin-right: auto;
   height: 800px;
-  //background-image: url("../images/con-01.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-clip: content-box;
@@ -49,7 +48,7 @@ body {
   background: #ecf0f1;
   margin-left: auto;
   margin-right: auto;
-  height: 60px;
+  height: 100px;
   font-size: 36px;
   font-weight: bold;
   color: #e74c3c;
